# StitchEngine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  imgui.ini
include/: Lights.h  Texture.h  camera.h  frameBuffer.h  mesh.h  renderPass.h  resourceManager.h  sceneGraph.h  shader.h  timeManager.h  tinyObjLoader.h  window.h
shaders/: defferedLighting.frag  fragShader.frag  frameBufferFrag.frag  frameBufferVert.vert  shadowMap.vert  vertexShader.vert
src/: Texture.cpp  camera.cpp  frameBuffer.cpp  main.cpp  mesh.cpp  renderPass.cpp  resourceManager.cpp  sceneGraph.cpp  shader.cpp  timeManager.cpp  window.cpp
